<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Smart Bus</string>
    <string name="bStart" translatable="false">Get Started !</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Enter ID :</string>
    <string name="hint_user">Enter ID</string>
    <string name="prompt_password">Enter Password :</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_forgot_your_password">Forgot your password ?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_username">User Name is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_input">This ID or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_database">Error connecting to databases</string>
    <string name="log">Logging you in</string>
    <!-- Change Password Page -->
    <string name="error_input">This ID is incorrect</string>
    <string name="b_check">Check ID</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="code">Enter Code</string>
    <string name="resend">Resend code</string>
    <string name="b_send_code">Verify Code</string>
    <string name="n_pass">New Password</string>
    <string name="v_pass">Verify Password</string>
    <string name="b_ch_p">Change password</string>
    <string name="error_match">Password does not match</string>
    <string name="error_code">enter code</string>
    <string name="error_math_code">The input code is wrong</string>
    <!-- Home Page -->
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <!--School Administration Home Page-->
    <string name="student">Students</string>
    <string name="pa">Parents</string>
    <string name="driver">Drivers</string>
    <string name="bus">Buses</string>
    <string name="emergency_a">Emergency Alerts</string>
    <string name="complains">Complaints</string>
    <string name="setting">Setting</string>
    <!--Parent Home Page-->
    <string name="child">My children</string>
    <string name="tracing">View Bus Location</string>
    <string name="notifications">Notifications</string>
    <string name="addComplains" tools:ignore="ExtraTranslation">Complaints</string>
    <!--Driver Home Page -->
    <string name="busInfo">Bus Information</string>
    <string name="alert">Emergency Alert</string>
    <string name="gps">This application requires GPS to work properly, do you want to enable it?</string>
    <!--Profile Page -->
    <string name="edit"> Edit </string>
    <string name="delete"> Delete </string>
    <string name="name"> Name </string>
    <string name="parent_id">Parent ID</string>
    <string name="bu_id">Bus ID</string>
    <string name="bus_s_id">BusStop ID</string>
    <string name="address">Address</string>
    <string name="ph">Phone</string>
    <string name="pas"> Password </string>
    <string name="stuAtt"> Attendance </string>
    <string name="state">State</string>
    <string name="hst"> Last updated</string>
    <string name="showch">Children List</string>
    <string name="show">Go to</string>
    <string name="delete_mas">Are you sure you complete the delete</string>
    <string name="pdelete_mas">Do you want to delete students for this parent?</string>


    <!--Registration Driver Page -->
    <string name="f_name">First Name</string>
    <string name="s_name"> Second Name</string>
    <string name="l_name">Last Name</string>
    <string name="ph_num">Phone Number</string>
    <string name="profile_image">Profile Image</string>
    <string name="bus_num">Bus ID</string>
    <string name="create_account">Create Account</string>
    <string name="driv_mas">Are you sure you do not choose a bus?</string>
    <string name="driv_exist">This driver is exist in the database</string>
    <string name="s_drive">The Driver Add Successfully</string>
    <string name="error_add_drive">The Driver Add Unsuccessfully</string>
    <string name="error_phone">The phone number form 5xxxxxxxxx</string>
    <string name="log_info">login information</string>
    <string name="iD">ID :</string>
    <string name="passw">Password:</string>
    <string name="c_p">Current Password</string>
    <string name="c_p_error">The current password is incorrect</string>

    <string name="n_p">New Password</string>
    <string name="v_p">Verification Password</string>
    <string name="p_exist">This parent is exist in the database</string>
    <string name="item">There are no recorded data</string>
    <string name="st_out">This student is not riding on the bus</string>

    <!--Registration Parent Page -->
    <string name="hom_loc">Home Location</string>
    <string name="patterns">Area, Street Name</string>
    <!--Registration Student Page -->
    <string name="st_level">Level</string>
    <string name="bus_stop">Bus StopID :</string>
    <string name="bus_iD">BusID :</string>
    <string name="parent_name">Parent Name</string>
    <string name="ins">Save</string>
    <string name="level">Level</string>
    <string name="st_exist">This student is exist in the database</string>
    <string name="su">Successful </string>
    <string name="unsu">Unsuccessful </string>
    <string name="p">Processing</string>
    <string name="tag">Tag</string>
    <!--Registration Bus Page -->
    <string name="plate">Plate</string>
    <string name="driverID">DriverID</string>
    <string name="bus_ma">Are you sure you do not choose a Driver ?</string>
    <string name="bus_exist">This bus is exist in the database</string>
    <!--Registration BusStops Page -->
    <string name="stop_n">Stop Name</string>
    <string name="stop_or">Bus Stop Order</string>
    <string name="location">Location</string>
    <string name="bus_st_err">BusStop is already registered</string>


    <!--Complaints  Page -->
    <string name="comp">Complaints</string>
    <string name="send">Send</string>
    <string name="errorbus">BusID does not exist</string>
    <string name="driverN">Driver Name</string>
    <string name="parentN">Parent Name</string>
    <string name="comp_mass">The complaint is not in the database</string>
    <string name="comp_error">Error download data</string>
    <string name="comp_erro">Error upload data</string>
    <!--Bus Details  Page -->
    <string name="stuNum">No.Passengers </string>
    <string name="d_n">Driver Name </string>
    <!--Bus Stops  Page -->
    <string name="voice">Upload Audio</string>
    <string name="bu_stop">There are no registered bus stops</string>
    <string name="trip">There is no trip today</string>


    <string name="stulevellist">Choose The Student Level: </string>st_name
    <string name="title_activity_sign_in_page">SignInPage</string>
    <string name="title_activity_home">Home Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_item_list">ItemList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bus_details">BusDetailsActivity</string>
    <string name="r_s">Registered students</string>
    <string name="b_s">Bus Stops</string>
    <string name="title_activity_maps_location">Map</string>
    <string name="title_activity_bus_location_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_bus_stops_maps">Map</string>

    <!--EmergencyMessage -->
    <string name="EmergencyMessage">Message : </string>
    <string name="EmerMessage">  </string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id">BUS_STOP_01</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>


</resources>
