<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/paddingText">
        <TextView
            android:id="@+id/textid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prompt_username"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center"
            android:hint="@string/hint_user"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="@dimen/paddingText"
            />
        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center"
            android:hint="@string/code"
            android:background="@android:drawable/editbox_background"
            />

        <EditText
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center"
            android:hint="@string/n_pass"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="@dimen/paddingText"
            />
        <TextView
            android:id="@+id/v_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/v_pass"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/vpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center"
            android:hint="@string/v_pass"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="@dimen/paddingText"
            />


    </LinearLayout>
    <TextView
        android:layout_gravity="center_vertical"
        android:id="@+id/secondscounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:textColor="@android:color/darker_gray"/>
    <Button
        android:id="@+id/b_check"
        android:layout_width="200dp"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="@dimen/dimension_of_the_limbs_log"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/b_check"
        android:onClick="getPhone"
        android:textStyle="bold"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_st"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/sendCode"
        android:layout_width="200dp"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="@dimen/dimension_of_the_limbs_log"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/b_send_code"
        android:onClick="verifyCode"
        android:textStyle="bold"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_st"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/resendCode"
        android:layout_width="200dp"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="@dimen/dimension_of_the_limbs_log"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:text="@string/resend"
        android:onClick="resendCode"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_st"
        android:textAlignment="center"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/ch_pass"
        android:layout_width="200dp"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="@dimen/dimension_of_the_limbs_log"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:text="@string/b_ch_p"
        android:onClick="changePass"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/button_st"
        android:textAlignment="center"
        android:textAllCaps="false"
        />


</LinearLayout>