<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingVertical="45dp"
    android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/students"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:paddingLeft="20dp"
            android:background="@drawable/button_f"
            android:drawableLeft="@drawable/bags"
            android:text="@string/student"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:paddingLeft="20dp"
            android:background="@drawable/button_s"
            android:text="@string/pa"
            android:drawableLeft="@drawable/parent"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/bus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:paddingLeft="20dp"
            android:background="@drawable/button_f"
            android:drawableLeft="@drawable/ic_directions_bus"
            android:text="@string/bus"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/drivers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:paddingLeft="20dp"
            android:background="@drawable/button_s"
            android:drawableLeft="@drawable/driverhome"
            android:textColor="@color/colorPrimary"
            android:text="@string/driver"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/emergency"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:paddingLeft="20dp"
            android:background="@drawable/button_f"
            android:drawableLeft="@drawable/ic_error"
            android:text="@string/emergency_a"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/complains"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="16dp"
            android:paddingLeft="20dp"
            android:background="@drawable/button_s"
            android:drawableLeft="@drawable/ic_announcement"
            android:textColor="@color/colorPrimary"
            android:text="@string/complains"
            android:textAlignment="center"
            android:textAllCaps="false"
            />

</LinearLayout>
</ScrollView>