<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/paddingText"
    android:background="@color/colorPrimary"
    tools:context=".SignInPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/smart_school_bus_log"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/dimension_of_the_limbs_log"/>

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:hint="@string/hint_user"
                android:background="@android:drawable/editbox_background"
                android:drawableLeft="@drawable/ic_action_user"
                android:layout_marginBottom="@dimen/paddingText"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@android:drawable/editbox_background"
                android:drawableLeft="@drawable/ic_action_lock_closed"/>
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="@dimen/dimension_of_the_limbs_log"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/colorButtonText"
                android:background="@drawable/button_st"
                android:textAlignment="center"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/forgot_your_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_forgot_your_password"
                android:textColor="@color/colorButtonText"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

</ScrollView>