<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingVertical="90dp"
    android:paddingHorizontal="20dp">

    <Button
        android:id="@+id/students"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="16dp"
        android:paddingLeft="20dp"
        android:background="@drawable/button_f"
        android:drawableLeft="@drawable/bags"
        android:text="@string/child"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/bus_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:paddingLeft="20dp"
        android:background="@drawable/button_s"
        android:drawableLeft="@drawable/ic_place"
        android:textColor="@color/colorPrimary"
        android:text="@string/tracing"
        android:textAlignment="center"
        android:textAllCaps="false"
        />



    <Button
        android:id="@+id/add_complains"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:paddingLeft="20dp"
        android:background="@drawable/button_f"
        android:drawableLeft="@drawable/ic_note_add"
        android:textColor="@android:color/white"
        android:text="@string/addComplains"
        android:textAlignment="center"
        android:textAllCaps="false"
        />


</LinearLayout>