<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationDriverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="@dimen/paddingText">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:paddingLeft="5dp"
                android:text="@string/f_name" />
            <EditText
                android:id="@+id/f_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="@dimen/paddingText">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:paddingLeft="5dp"
                android:text="@string/s_name" />
            <EditText
                android:id="@+id/s_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="@dimen/paddingText"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:paddingLeft="5dp"
                android:text="@string/l_name"
               />
            <EditText
                android:id="@+id/l_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="@dimen/paddingText">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:paddingLeft="5dp"
                android:text="@string/ph_num" />
            <EditText
                android:id="@+id/ph_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="phone"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="@dimen/paddingText">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:paddingLeft="5dp"
            android:text="@string/profile_image" />
        <EditText
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:background="@android:drawable/editbox_background"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.25"
            android:background="@android:drawable/ic_menu_gallery"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="@dimen/paddingText">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:paddingLeft="5dp"
                android:text="@string/bus_num" />
            <Spinner
                android:id="@+id/bus_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:drawable/editbox_background"
                tools:ignore="OnClick" />

        </LinearLayout>

    <Button
        android:id="@+id/create_acc"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/create_account"
        android:textColor="@color/colorButtonText"/>
</LinearLayout>

</ScrollView>